
- #13074, #13082, #13084: refactoring in the pattern-matching compiler
  (Gabriel Scherer, review by Thomas Refis, Vincent Laviron and Nick Roberts)

- #13067: rework volatile memory access rules under TSan to consider properly
  aligned smaller-than-register read operations as atomic, which gets rid of
  false positives on s390x
  (Miod Vallat, review by Fabien Buoro)

### Build system:

- #12909: Reorganise how MKEXE_VIA_CC is built to make it correct for MSVC by
  grouping all the linker flags at the end of the C compiler commandline
  (David Allsopp and Samuel Hym, review by Nicolás Ojeda Bär)

- #12992, #13009: Check that flexlink can be executed only when building in a
  native windows environment.
  (Romain Beauxis, review by David Allsopp and Sébastien Hinderer)

- #12996: Only link with -lgcc_eh when available.
  (Romain Beauxis, review by David Allsopp and Miod Vallat)

### Bug fixes:

- #12854: Add a test in the regression suite that flags the bug #12825.
  (Luc Maranget)

- #12888: fix printing of uncaught exceptions in `.cmo` files passed on the
  command-line of the toplevel.
  (Nicolás Ojeda Bär, review by Florian Angeletti, report by Daniel Bünzli)

- #12910, #12920: Fix an unsound interaction between first-class modules
  and polymorphic records by saving and restoring univar_pairs.
  (Stephen Dolan, review by Gabriel Scherer, report by Jeremy Yallop)

- #12994: Remove un-used and unsafe caml_drop_continuation
  (Tim McGilchrist, reviewed by Gabriel Scherer and Miod Vallat)

- #12963: Restore caml_runtime_parameters implementation. This primitive allows
  programs to query the runtime parameters supplied to an OCaml program.
  Implementation missing since OCaml 5.0.
  (Tim McGilchrist, reviewed by David Allsopp and Miod Vallat)

- #13012: parsing: Fix dropped attributes after a '-' or '+'
  The syntax '-(1 [@foo])' was incorrectly parsed as '-1'.
  (Jules Aguillon, reviewed by Gabriel Scherer, report by Gabriel Scherer)
