@@ -15,79 +15,80 @@
 
 (** The content of the LaTeX style to generate when generating LaTeX code. *)
 
-let content ="\
-\n%% Support macros for LaTeX documentation generated by ocamldoc.\
-\n%% This file is in the public domain; do what you want with it.\
-\n\
-\n\\NeedsTeXFormat{LaTeX2e}\
-\n\\ProvidesPackage{ocamldoc}\
-\n              [2001/12/04 v1.0 ocamldoc support]\
-\n\
-\n\\newenvironment{ocamldoccode}{%\
-\n  \\bgroup\
-\n  \\leftskip\\@totalleftmargin\
-\n  \\rightskip\\z@skip\
-\n  \\parindent\\z@\
-\n  \\parfillskip\\@flushglue\
-\n  \\parskip\\z@skip\
-\n  %\\noindent\
-\n  \\@@par\\smallskip\
-\n  \\@tempswafalse\
-\n  \\def\\par{%\
-\n    \\if@tempswa\
-\n      \\leavevmode\\null\\@@par\\penalty\\interlinepenalty\
-\n  \\else\
-\n    \\@tempswatrue\
-\n    \\ifhmode\\@@par\\penalty\\interlinepenalty\\fi\
-\n  \\fi}\
-\n  \\obeylines\
-\n  \\verbatim@font\
-\n  \\let\\org@prime~%\
-\n  \\@noligs\
-\n  \\let\\org@dospecials\\dospecials\
-\n  \\g@remfrom@specials{\\\\}\
-\n  \\g@remfrom@specials{\\{}\
-\n  \\g@remfrom@specials{\\}}\
-\n  \\let\\do\\@makeother\
-\n  \\dospecials\
-\n  \\let\\dospecials\\org@dospecials\
-\n  \\frenchspacing\\@vobeyspaces\
-\n  \\everypar \\expandafter{\\the\\everypar \\unpenalty}}\
-\n{\\egroup\\par}\
-\n\
-\n\\def\\g@remfrom@specials#1{%\
-\n  \\def\\@new@specials{}\
-\n  \\def\\@remove##1{%\
-\n    \\ifx##1#1\\else\
-\n    \\g@addto@macro\\@new@specials{\\do ##1}\\fi}\
-\n  \\let\\do\\@remove\\dospecials\
-\n  \\let\\dospecials\\@new@specials\
-\n  }\
-\n\
-\n\\newenvironment{ocamldocdescription}\
-\n{\\list{}{\\rightmargin0pt \\topsep0pt}\\raggedright\\item\\noindent\\relax\\ignorespaces}\
-\n{\\endlist\\medskip}\
-\n\
-\n\\newenvironment{ocamldoccomment}\
-\n{\\list{}{\\leftmargin 2\\leftmargini \\rightmargin0pt \\topsep0pt}\\raggedright\\item\\noindent\\relax}\
-\n{\\endlist}\
-\n\
-\n\\let \\ocamldocparagraph \\paragraph\
-\n\\def \\paragraph #1{\\ocamldocparagraph {#1}\\noindent}\
-\n\\let \\ocamldocsubparagraph \\subparagraph\
-\n\\def \\subparagraph #1{\\ocamldocsubparagraph {#1}\\noindent}\
-\n\
-\n\\let\\ocamldocvspace\\vspace\
-\n\
-\n\\newenvironment{ocamldocindent}{\\list{}{}\\item\\relax}{\\endlist}\
-\n\\newenvironment{ocamldocsigend}\
-\n     {\\noindent\\quad\\texttt{sig}\\ocamldocindent}\
-\n     {\\endocamldocindent\\vskip -\\lastskip\
-\n      \\noindent\\quad\\texttt{end}\\medskip}\
-\n\\newenvironment{ocamldocobjectend}\
-\n     {\\noindent\\quad\\texttt{object}\\ocamldocindent}\
-\n     {\\endocamldocindent\\vskip -\\lastskip\
-\n      \\noindent\\quad\\texttt{end}\\medskip}\
-\n\
-\n\\endinput\
-\n"
+let content = {|
+%% Support macros for LaTeX documentation generated by ocamldoc.
+%% This file is in the public domain; do what you want with it.
+
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{ocamldoc}
+              [2001/12/04 v1.0 ocamldoc support]
+
+\newenvironment{ocamldoccode}{%
+  \bgroup
+  \leftskip\@totalleftmargin
+  \rightskip\z@skip
+  \parindent\z@
+  \parfillskip\@flushglue
+  \parskip\z@skip
+  %\noindent
+  \@@par\smallskip
+  \@tempswafalse
+  \def\par{%
+    \if@tempswa
+      \leavevmode\null\@@par\penalty\interlinepenalty
+  \else
+    \@tempswatrue
+    \ifhmode\@@par\penalty\interlinepenalty\fi
+  \fi}
+  \obeylines
+  \verbatim@font
+  \let\org@prime~%
+  \@noligs
+  \let\org@dospecials\dospecials
+  \g@remfrom@specials{\\}
+  \g@remfrom@specials{\{}
+  \g@remfrom@specials{\}}
+  \let\do\@makeother
+  \dospecials
+  \let\dospecials\org@dospecials
+  \frenchspacing\@vobeyspaces
+  \everypar \expandafter{\the\everypar \unpenalty}}
+{\egroup\par}
+
+\def\g@remfrom@specials#1{%
+  \def\@new@specials{}
+  \def\@remove##1{%
+    \ifx##1#1\else
+    \g@addto@macro\@new@specials{\do ##1}\fi}
+  \let\do\@remove\dospecials
+  \let\dospecials\@new@specials
+  }
+
+\newenvironment{ocamldocdescription}
+{\list{}{\rightmargin0pt \topsep0pt}\raggedright\item\noindent\relax\ignorespaces}
+{\endlist\medskip}
+
+\newenvironment{ocamldoccomment}
+{\list{}{\leftmargin 2\leftmargini \rightmargin0pt \topsep0pt}\raggedright\item\noindent\relax}
+{\endlist}
+
+\let \ocamldocparagraph \paragraph
+\def \paragraph #1{\ocamldocparagraph {#1}\noindent}
+\let \ocamldocsubparagraph \subparagraph
+\def \subparagraph #1{\ocamldocsubparagraph {#1}\noindent}
+
+\let\ocamldocvspace\vspace
+
+\newenvironment{ocamldocindent}{\list{}{}\item\relax}{\endlist}
+\newenvironment{ocamldocsigend}
+     {\noindent\quad\texttt{sig}\ocamldocindent}
+     {\endocamldocindent\vskip -\lastskip
+      \noindent\quad\texttt{end}\medskip}
+\newenvironment{ocamldocobjectend}
+     {\noindent\quad\texttt{object}\ocamldocindent}
+     {\endocamldocindent\vskip -\lastskip
+      \noindent\quad\texttt{end}\medskip}
+
+\endinput
+
+|}
