@@ -178,46 +178,46 @@ let parse_arguments argv =
 
   if !output_c = "" then output_c := !output
 
-let usage = "\
-Usage: ocamlmklib [options] <.cmo|.cma|.cmx|.ml|.mli|.o|.a|.obj|.lib|\
-                             .dll|.dylib files>\
-\nOptions are:\
-\n  -args <file>   Read additional newline-terminated command line arguments\
-\n                 from <file>\
-\n  -args0 <file>  Read additional null character terminated command line\
-\n                 arguments from <file>\
-\n  -cclib <lib>   C library passed to ocamlc -a or ocamlopt -a only\
-\n  -ccopt <opt>   C option passed to ocamlc -a or ocamlopt -a only\
-\n  -custom        Disable dynamic loading\
-\n  -g             Build with debug information\
-\n  -dllpath <dir> Add <dir> to the run-time search path for DLLs\
-\n  -F<dir>        Specify a framework directory (MacOSX)\
-\n  -framework <name>    Use framework <name> (MacOSX)\
-\n  -help          Print this help message and exit\
-\n  --help         Same as -help\
-\n  -h             Same as -help\
-\n  -I <dir>       Add <dir> to the path searched for OCaml object files\
-\n  -failsafe      fall back to static linking if DLL construction failed\
-\n  -ldopt <opt>   C option passed to the shared linker only\
-\n  -linkall       Build OCaml archive with link-all behavior\
-\n  -l<lib>        Specify a dependent C library\
-\n  -L<dir>        Add <dir> to the path searched for C libraries\
-\n  -ocamlc <cmd>  Use <cmd> in place of \"ocamlc\"\
-\n  -ocamlcflags <opt>    Pass <opt> to ocamlc\
-\n  -ocamlopt <cmd> Use <cmd> in place of \"ocamlopt\"\
-\n  -ocamloptflags <opt>  Pass <opt> to ocamlopt\
-\n  -o <name>      Generated OCaml library is named <name>.cma or <name>.cmxa\
-\n  -oc <name>     Generated C library is named dll<name>.so or lib<name>.a\
-\n  -rpath <dir>   Same as -dllpath <dir>\
-\n  -R<dir>        Same as -rpath\
-\n  -verbose       Print commands before executing them\
-\n  -v             same as -verbose\
-\n  -version       Print version and exit\
-\n  -vnum          Print version number and exit\
-\n  -Wl,-rpath,<dir>     Same as -dllpath <dir>\
-\n  -Wl,-rpath -Wl,<dir> Same as -dllpath <dir>\
-\n  -Wl,-R<dir>          Same as -dllpath <dir>\
-\n"
+let usage =
+{|Usage: ocamlmklib [options] <.cmo|.cma|.cmx|.ml|.mli|.o|.a|.obj|.lib|
+                             .dll|.dylib files>
+Options are:
+  -args <file>   Read additional newline-terminated command line arguments
+                 from <file>
+  -args0 <file>  Read additional null character terminated command line
+                 arguments from <file>
+  -cclib <lib>   C library passed to ocamlc -a or ocamlopt -a only
+  -ccopt <opt>   C option passed to ocamlc -a or ocamlopt -a only
+  -custom        Disable dynamic loading
+  -g             Build with debug information
+  -dllpath <dir> Add <dir> to the run-time search path for DLLs
+  -F<dir>        Specify a framework directory (MacOSX)
+  -framework <name>    Use framework <name> (MacOSX)
+  -help          Print this help message and exit
+  --help         Same as -help
+  -h             Same as -help
+  -I <dir>       Add <dir> to the path searched for OCaml object files
+  -failsafe      fall back to static linking if DLL construction failed
+  -ldopt <opt>   C option passed to the shared linker only
+  -linkall       Build OCaml archive with link-all behavior
+  -l<lib>        Specify a dependent C library
+  -L<dir>        Add <dir> to the path searched for C libraries
+  -ocamlc <cmd>  Use <cmd> in place of "ocamlc"
+  -ocamlcflags <opt>    Pass <opt> to ocamlc
+  -ocamlopt <cmd> Use <cmd> in place of "ocamlopt"
+  -ocamloptflags <opt>  Pass <opt> to ocamlopt
+  -o <name>      Generated OCaml library is named <name>.cma or <name>.cmxa
+  -oc <name>     Generated C library is named dll<name>.so or lib<name>.a
+  -rpath <dir>   Same as -dllpath <dir>
+  -R<dir>        Same as -rpath
+  -verbose       Print commands before executing them
+  -v             same as -verbose
+  -version       Print version and exit
+  -vnum          Print version number and exit
+  -Wl,-rpath,<dir>     Same as -dllpath <dir>
+  -Wl,-rpath -Wl,<dir> Same as -dllpath <dir>
+  -Wl,-R<dir>          Same as -dllpath <dir>
+|}
 
 let command cmd =
   if !verbose then (print_string "+ "; print_string cmd; print_newline());
